# cancer-classification

./: .dockerignore  .gitignore  LICENSE  README.md  cleanup_for_github.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deployment/: Dockerfile  docker-compose.yml
deployment/api/: app.py
deployment/kubernetes/: deployment.yaml  hpa.yaml  service.yaml
docs/: DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  index.md
examples/: run_all_workflows.py  validate_system.py  workflow_10_analysis.py  workflow_1_api_test.py  workflow_2_4_models_ensemble.py  workflow_5_mlflow.py  workflow_6_mock_data.py  workflow_7_tests.py  workflow_8_9_validation.py  workflow_production_demo.py
scripts/: calibrate_model.py  clinical_validation.py  download_pcam.py  evaluate_model.py  export_models.py  prepare_stain_reference.py  train.py  verify_data.py
src/: __init__.py
src/configs/: data.yaml  deployment.yaml  inference.yaml  model.yaml  schema.py  training.yaml
src/data/: __init__.py  dataset.py  preprocessing.py  split_verification.py
src/inference/: anomaly_detection.py  calibration.py  ensemble_predictor.py  export.py  interpretability.py  model_registry.py  predictor.py
src/mlops/: deployment_pipeline.py  experiment_tracking.py
src/models/: __init__.py  center_aware_base.py  center_aware_resnet.py  deit.py  efficientnet.py  ensemble.py  resnet_cbam.py  vit.py
src/training/: __init__.py  callbacks.py  losses.py  metrics.py  trainer.py
src/utils/: __init__.py  export.py  logging_utils.py  reproducibility.py
src/validation/: __init__.py  clinical_validation.py  cross_validation.py  held_out_test_evaluation.py  test_evaluator.py
tests/: conftest.py  test_api.py  test_data.py  test_data_leakage.py  test_inference.py  test_models.py  test_training.py
